[package]
name = "theca"
version = "1.0.0"
authors = ["Roland Shoemaker <roland@bind.es>", "Paul Woolcock <paul@woolcock.us>"]
license = "MIT"
description = """
a simple, fully featured, command line note taking tool
"""
homepage = "https://pwoolcoc.github.io/theca"
repository = "https://github.com/pwoolcoc/theca"

[lib]
name = "theca"
path = "src/theca/lib.rs"

[[bin]]
name = "theca"
test = false
doc = false

[dependencies]
time = "^0.2.22"
regex = "^1.3.9"
rustc-serialize = "^0.3.24"
docopt = "^1.1.0"
rust-crypto = "^0.2.36"
rand = "^0.3.14"
tempdir = "^0.3.7"
libc = "^0.2.78"
term = "^0.6.1"
clippy = { version = "^0.0.302", optional = true }
dirs = "^3.0"
serde = "^1.0.116"

[features]
default = []
unstable = ["clippy"]
